# learnAICoding

./: .gitignore  CMakeLists.txt  README.md  README_SETUP.md  SECURITY_AUDIT_PROMPT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-pr-review.yml
include/: message_parser.h  string_utils.h
src/: main.cpp  string_utils.cpp
tests/: test_message_parser.cpp  test_string_utils.cpp
